--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       <div id="Time9Am" class="row time-block">
         <div class="col-md-1 hour">9 AM</div>
         <textarea class="col-md-10 description"></textarea>
-        <button class="col-md-1 msPulseEffect saveBtn"><i class="fas fa-save"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 10am timeblock -->
       <div id="Time10Am" class="row time-block">
         <div class="col-md-1 hour">10 AM</div>
         <textarea class="col-md-10 description"></textarea>
-        <button class="col-md-1 msPulseEffect saveBtn"><i class="fas fa-save"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       
       <!-- 11am timeblock -->
@@ -76,7 +76,7 @@
       <!-- 1pm timeblock -->
       <div id="Time1Pm" class="row time-block">
         <div class="col-md-1 hour">1 PM</div>
-        <textarea class="col-md-10 description" placeholder="Lunch break"></textarea>
+        <textarea class="col-md-10 description" ></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
