--- a/index.html
+++ b/index.html
@@ -48,63 +48,63 @@
       <!-- 9am timeblock -->
       <div id="Time9Am" class="row time-block">
         <div class="col-md-1 hour">9 AM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 10am timeblock -->
       <div id="Time10Am" class="row time-block">
         <div class="col-md-1 hour">10 AM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       
       <!-- 11am timeblock -->
       <div id="Time11Am" class="row time-block">
         <div class="col-md-1 hour">11 AM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       
       <!-- 12pm timeblock -->
       <div id="Time12Pm" class="row time-block">
         <div class="col-md-1 hour">12 PM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 1pm timeblock -->
       <div id="Time1Pm" class="row time-block">
         <div class="col-md-1 hour">1 PM</div>
-        <textarea class="col-md-10 description" ></textarea>
+        <textarea class="col-md-10 description past" placeholder="Lunch time"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 2pm timeblock -->
       <div id="Time2Pm" class="row time-block">
         <div class="col-md-1 hour">2 PM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 3pm timeblock -->
       <div id="Time3Pm" class="row time-block">
         <div class="col-md-1 hour">3 PM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 4pm timeblock -->
       <div id="Time4Pm" class="row time-block">
         <div class="col-md-1 hour">4 PM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 5pm timeblock -->
       <div id="Time5Pm" class="row time-block">
         <div class="col-md-1 hour">5 PM</div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description past"></textarea>
         <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div> 
     </div>
